fixed databox spacing

--- a/css/main.css
+++ b/css/main.css
@@ -360,7 +360,7 @@ a.active-text {
     margin-top: 1px;
     margin-right: 1px;
     padding: 5px;
-    width: 25%;
+    width: 40%;
     border: 2px solid black;
     font-size: 14px;
     color: black;
@@ -398,10 +398,33 @@ a.active-text {
   }
   .right-align {
     display: inline-block;
-    width: 140px;
+    width: 110px;
   }
   .inactive {
     display: none !important;
+  }
+}
+
+@media all and (min-width: 1400px) {
+  .censusInfo {
+    position: absolute;
+    font-family: sans-serif;
+    margin-top: 1px;
+    margin-right: 1px;
+    padding: 5px;
+    width: 25%;
+    border: 2px solid black;
+    font-size: 14px;
+    color: black;
+    border-radius: 3px;
+    background-color: rgba(255, 255, 255, 0.85);
+    padding: 2rem;
+    display: inline-block;
+    right: 0px;
+  }
+  .right-align {
+    display: inline-block;
+    width: 140px;
   }
 }
 
